--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.9",
+    "@angular/animations": "^10.0.14",
     "@angular/cdk": "^11.2.1",
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
